# 3dPrinting

3dPrinter/: CMakeLists.txt  MainWindow.cpp  WorldViewer.qrc  WorldViewerException.h
3dPrinter/3dPrinter/: 3dPrinter.pro  CallbackSink.h  main.cpp  mainwindow.h  mainwindow.ui
3dPrinter/build-3dPrinter-Desktop_Qt_5_5_1_MSVC2013_64bit-Debug/: Makefile  Makefile.Debug  Makefile.Release
3dPrinter/build-3dPrinter-Desktop_Qt_5_5_1_MSVC2013_64bit-Debug/debug/: moc_mainwindow.cpp  qrc_WorldViewer.cpp
3dPrinter/build-3dPrinter-Desktop_Qt_5_5_1_MSVC2013_64bit-Release/: Makefile  Makefile.Debug  Makefile.Release  ui_mainwindow.h
3dPrinter/world/: axes.3ds  mrl.lua
3dPrinter/world/irb1410/: IRB1400_-_M2000_REV1_01-6.STL  IRB1400_-_M2000_REV2_01-10.STL  IRB1400_-_M2000_REV2_01-11.STL  IRB1400_-_M2000_REV2_01-5.STL  IRB1400_-_M2000_REV2_01-8.STL  IRB1400_-_M2000_REV2_01-9.STL  irb1410.lua
3dPrinter/world/irb1410/collision/: 1.stl  1_200.stl  2.stl  2_200.stl  3.stl  3_100.stl  4.stl  4_100.stl  5.stl  5_100.stl  6.stl  base.stl  base_200.stl  torch_20.stl
3dPrinter/world/irb1410/visual/: 1.stl  2.stl  3.stl  4.stl  5.stl  6.stl  base.stl  nozzle.stl
3dPrinter/world/irb2600/: irb2600.lua
3dPrinter/world/irb2600/collision/: 1.stl  2.stl  3.stl  4.stl  5.STL  6.stl  base.stl
3dPrinter/world/irb2600/visual/: 1.stl  2.stl  4.stl  5.STL  6.stl  base.stl
3dPrinter/world/irb4004/: irb4004.lua
3dPrinter/world/irb4004/visual/: carriage.stl  (+3 more)
3dPrinter/world/irb4400/: irb4400.lua
3dPrinter/world/irb6660/: irb6660.lua  irb6660rail.lua
3dPrinter/world/world/: world.lua
(+37 files in other folders)
